<resources>
    <string name="app_name">Trackify</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="trackify_track_your_world">Trackify !! Track Your World</string>
    <string name="username_email_id">UserName/Email Id</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="track_by_id">Track By Id</string>
</resources>
